--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'mongo-taskqueue'
-version = '0.2.4'
+version = '0.2.5'
 description = 'Queueing data structure on top of a MongoDB collection'
 readme = 'README.md'
 license = { text = 'MIT' }
@@ -16,13 +16,18 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Intended Audience :: Developers",
     "Topic :: Software Development",
 ]
 dependencies = [
-    'pymongo',
+    'pymongo>=4.15.5,<5',
 ]
-requires-python = '>=3.8'
+requires-python = '>=3.9'
 
 [project.urls]
 Homepage = 'https://github.com/mms-analytics/mongo-taskqueue'
