--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,32 +11,13 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
-    services:
-      mongo:
-        image: mongo:7
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongosh --quiet --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval 5s
-          --health-timeout 5s
-          --health-retries 10
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Set up uv
-        uses: astral-sh/setup-uv@v3
-        with:
-          version: "latest"
-      - name: Install dependencies
-        run: uv sync --locked
-      - name: Run tests
-        run: uv run python -m unittest discover -s tests
+      - name: Run tests with Docker Compose
+        run: docker compose up --build --abort-on-container-exit --exit-code-from tests
         env:
-          MONGO_URI: mongodb://localhost:27017
-          MONGO_DATABASE: mongotq_test
-          MONGO_COLLECTION: taskqueue
+          PYTHON_VERSION: ${{ matrix.python-version }}
+      - name: Tear down Docker Compose
+        if: always()
+        run: docker compose down -v
