--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,11 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'mongo-taskqueue'
-version = '0.2.5'
+version = '0.2.6'
 description = 'Queueing data structure on top of a MongoDB collection'
 readme = 'README.md'
 license = { text = 'MIT' }
+license-files = ['LICENSE']
 maintainers = [
     { name = 'Shawn Azdam', email = 'shawn@azdam.com' }
 ]
@@ -29,5 +30,41 @@ dependencies = [
 ]
 requires-python = '>=3.9'
 
+[project.optional-dependencies]
+dev = [
+    'mypy>=1.10',
+    'ruff>=0.5.0',
+]
+
 [project.urls]
 Homepage = 'https://github.com/mms-analytics/mongo-taskqueue'
+Repository = 'https://github.com/mms-analytics/mongo-taskqueue'
+Issues = 'https://github.com/mms-analytics/mongo-taskqueue/issues'
+Changelog = 'https://github.com/mms-analytics/mongo-taskqueue/blob/main/CHANGELOG.md'
+
+[project.scripts]
+mongotq = 'mongotq.cli:main'
+
+[tool.setuptools]
+package-dir = { "" = "src" }
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[tool.setuptools.package-data]
+mongotq = ["py.typed"]
+
+[tool.ruff]
+line-length = 88
+target-version = "py39"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "W"]
+
+[tool.mypy]
+python_version = "3.9"
+warn_unused_configs = true
+no_implicit_optional = true
+warn_return_any = true
+warn_unused_ignores = true
+ignore_missing_imports = true
