--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = 'mongo-taskqueue'
 version = '0.2.6'
 description = 'Queueing data structure on top of a MongoDB collection'
 readme = 'README.md'
-license = { text = 'MIT' }
+license = 'MIT'
 license-files = ['LICENSE']
 maintainers = [
     { name = 'Shawn Azdam', email = 'shawn@azdam.com' }
