--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'mongo-taskqueue'
-version = '0.2.7'
+version = '0.3.0'
 description = 'Queueing data structure on top of a MongoDB collection'
 readme = 'README.md'
 license = 'MIT'
@@ -34,6 +34,9 @@ requires-python = '>=3.9'
 dev = [
     'mypy>=1.10',
     'ruff>=0.5.0',
+]
+async = [
+    'motor>=3.4',
 ]
 
 [project.urls]
