--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,10 @@ dev = [
     'mypy>=1.10',
     'ruff>=0.5.0',
 ]
+docs = [
+    'mkdocs>=1.6.0',
+    'mkdocs-material>=9.5.0',
+]
 async = [
     'motor>=3.4',
 ]
